Se agrego el widget chat de whatsapp

--- a/index-square.html
+++ b/index-square.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/floating-wpp.css">
     <!---title logo icon-->
     <link rel="shortcut icon" href="images/libro.ico" />
     <!-- Respond.js IE8 support media queries -->
@@ -87,8 +88,9 @@
                                 <div class="welcome-text">
                                     <div class="type-wrap">
                                         <div id="typed-strings">
-                                            <h1>Soy <span>"Matias Fetter"</span></h1>
-                                            <h1>Mi trabajo es <span>"Sanar Cuerpo y Alma"</span></h1>
+                                            <h1>Mi nombre es <span>"Matias Fetter"</span></h1>
+                                            <h1>Soy especialista en<span>"Registros Akashicos"</span></h1>
+                                            <h1>Y a traves de ellos le llevaré<span>"Luz a tu vida"</span></h1>
                                         </div>
                                         <span id="typed"></span>
                                     </div>
@@ -463,7 +465,7 @@
                                 <span class="adress-loc"></span>
                             </p>
                             <p class="phone">
-                                <i class="fa fa-phone" aria-hidden="true"></i>
+                                
                                 <span>Celular:</span>
                             </p>
                             <p class="email">
@@ -530,6 +532,9 @@
         </div>
     </footer>
     <!--End Footer-->
+     <!--Whatsapp Chat-->
+     <div id="myDiv"></div>
+     <!--End Whatsapp Chat-->
 
     <!--javascript-->
     <script src="js/jquery.min.js "></script>
@@ -546,4 +551,6 @@
     <script src="js/jquery.counterup.min.js "></script>
     <script src="js/jquery.singlePageNav.min.js "></script>
     <script src="js/main.js "></script>
+    <script src="js/floating-wpp.js"></script>
+    <script src="js/wp.js"></script>
 </body>
